# vsgen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
input/: shovel.json
src/: cli.rs  data.rs  datagen.rs  error.rs  file.rs  main.rs
