[package]
name = "vsgen"
version = "0.1.1"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from", "error", "display"] }
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
